<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bignerdranch.android.gohard.ReceiptActivity">

    <fragment
        tools:layout="@layout/fragment_data"
        android:name="com.bignerdranch.android.gohard.dataFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment3"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/abc_ab_share_pack_mtrl_alpha"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/receipt"
            android:id="@+id/receiptLabel"
            android:textSize="30sp"
            android:background="#505050"
            android:textColor="@color/abc_primary_text_material_light"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/print"
            android:id="@+id/printButton"
            android:layout_marginRight="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/emailButton"
            />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/receiptTextView"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/receipt_text"
        android:textStyle="bold"
        android:textSize="15sp"/>

</RelativeLayout>
