<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bignerdranch.android.gohard.PersonActivity"
    android:orientation="vertical"
    android:background="#ffffff">

    <fragment
        tools:layout="@layout/fragment_data"
        android:name="com.bignerdranch.android.gohard.dataFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment2"
        android:layout_gravity="right"
         />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/personDataLayout"
        android:background="@android:drawable/dialog_holo_dark_frame">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personPicLayout">

            <ImageView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:id="@+id/profilePic"
                android:contentDescription="@string/profilepic"
                android:background="#00dffd"
                android:src="@drawable/app_gym_grey"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/personNameLayout"
            android:gravity="center"
            android:background="#bdbdbd">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView5"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingTop="10dp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/take_pic"
                android:id="@+id/takePicButton"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:background="#333333"
                android:textColor="@color/abc_primary_text_material_light"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/new_session"
                android:id="@+id/newSessionButton"
                android:textColor="@color/abc_primary_text_material_light"
                android:layout_marginLeft="5dp"
                android:background="#333333"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:paddingTop="25dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abc_edit_text_material">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/session_1"
                    android:id="@+id/checkBox"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/sessionInfo"
                    android:layout_marginLeft="20dp"/>

            </TableRow>

        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginBottom="-50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btLogOff"
            android:id="@+id/button"
            android:layout_gravity="right"
            android:layout_marginTop="30dp" />
    </LinearLayout>
</LinearLayout>
