<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bignerdranch.android.gohard.NewSessionActivity">

    <fragment
        tools:layout="@layout/fragment_data"
        android:name="com.bignerdranch.android.gohard.dataFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/topNewSessionLabel"
        android:layout_alignEnd="@+id/topNewSessionLabel" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#505050"
        android:id="@+id/topNewSessionLabel"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/new_session"
            android:id="@+id/newSessionLabel"
            android:textColor="@color/abc_primary_text_material_light"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/topNewSessionLabel"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateRow"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/dateText"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/numberPicker"
                android:layout_marginLeft="10dp"
                android:layout_column="1"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:id="@+id/textView7"
                android:layout_column="3"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/numberPicker2"
                android:layout_column="4"/>

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:id="@+id/textView8"
                android:layout_column="3"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/numberPicker3"
                android:layout_column="6"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:id="@+id/timeRow"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:id="@+id/timeLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/numberPicker4"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/colon_time"
                android:id="@+id/textView9"
                android:layout_column="3"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/numberPicker5"
                android:layout_column="4"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="PM"
                android:id="@+id/textView10"
                android:layout_column="5"
                android:layout_marginLeft="5dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch1"
                android:layout_column="6"
                android:background="#b1b1b1"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/cardNRow">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/cardNLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="bottom|center"
                android:text="@string/card_number"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/cardNTextView"
                android:layout_marginLeft="-125dp"
                android:layout_gravity="bottom"
                android:paddingTop="10dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp_date"
                android:id="@+id/textView6"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/numberPicker6"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:id="@+id/textView11"
                android:layout_column="3"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical|bottom"
                android:layout_marginLeft="2dp"
                />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/numberPicker7"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/address_label"
                android:id="@+id/addressLabel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_gravity="bottom|center"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_weight="1"
                android:layout_marginLeft="-125dp"
                android:layout_gravity="bottom"
                android:paddingTop="10dp"
                />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
        android:layout_alignLeft="@+id/tableLayout"
        android:layout_alignStart="@+id/tableLayout"
        android:layout_marginTop="15dp"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/city_label"
            android:id="@+id/cityLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|bottom"
            android:gravity="bottom"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_marginLeft="25dp"
            android:layout_gravity="bottom"
            android:paddingTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:weightSum="1"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/state_label"
            android:id="@+id/textView12"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|bottom"
            android:gravity="bottom"/>

        <EditText
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_marginLeft="25dp"
            android:layout_gravity="bottom"
            android:paddingTop="10dp"
            android:inputType="textPostalAddress"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zip"
            android:id="@+id/textView13"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|bottom"
            android:gravity="bottom"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_marginLeft="10dp"
            android:layout_gravity="bottom"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:layout_marginRight="30dp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/abc_ab_share_pack_mtrl_alpha">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/submitNewSessionButton"
            android:id="@+id/newSessionBtnSub"
            android:textColor="@color/abc_primary_text_material_light"
            android:background="#6b6b6b"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>

</RelativeLayout>
